--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Prueba JS</title>
 </head>
 <body>
-    <input type="number" id="inputNumero"/>
-    <button id="btnAgregar">Agregar</button>
-    <button id="btnSumatoria">Sumatoria</button>
-    <ul id="lista"></ul>
-    <h1 id="titulo"></h1>
+    <div class="container">
+        <input type="text" id="inputUser" placeholder="Ingrese su usuario"/>
+        <input type="password" id="inputPass" placeholder="Ingrese una contraseña"/>
+        <p id="passInfo"></p>
+        <button disabled id="loginButton">Login</button>
+    </div>
     <script src="main.js"></script>
-
 </body>
 </html>
